<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:titleTextColor="@color/white"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/imgNoItem"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/nothing_page"
        android:visibility="gone"
        android:contentDescription="@string/foodImageDescription" />

    <TextView
        android:id="@+id/tv_messageFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/message_not_favorite_found" />

    <Button
        android:id="@+id/btn_backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/back_to_menu"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_list" />

    <ProgressBar
        android:id="@+id/progress_bar_category_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>