<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background_home"
            android:contentDescription="@string/foodImageDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/greet_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/welcome2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:lines="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/greet_user"
                app:layout_constraintStart_toStartOf="@id/greet_user"/>

            <ImageButton
                android:id="@+id/random_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="40dp"
                android:backgroundTint="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/random"
                android:contentDescription="@string/foodImageDescription"
                app:layout_constraintStart_toEndOf="@id/greet_user"
                app:layout_constraintTop_toTopOf="@id/greet_user"/>

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/foodImageDescription"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintStart_toEndOf="@id/random_button"
                app:layout_constraintTop_toTopOf="@id/greet_user" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:layout_marginTop="45dp"
                android:textAlignment="textStart"
                android:text="@string/article"
                android:textSize="16sp"
                android:textStyle="bold"
                android:outlineProvider="none"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/random_button"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_article"
                app:layout_constraintTop_toBottomOf="@id/btn_article"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cookingMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="textStart"
                android:text="@string/cooking_menu"
                android:textSize="16sp"
                android:textStyle="bold"
                android:outlineProvider="none"
                android:textColor="@color/black"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/rv_popular"
                app:layout_constraintStart_toStartOf="@+id/btn_article"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recentFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_recent"
                app:layout_constraintTop_toBottomOf="@+id/btn_cookingMenu"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</androidx.core.widget.NestedScrollView>