<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/img_foodDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flexible_image_height_detail"
            android:scaleType="centerCrop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/foodImageDescription" />

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flexible_image_height_detail"
            android:background="?attr/colorPrimaryVariant" />

        <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/flexible_image_height_detail"
                    android:background="@android:color/transparent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-30dp"
                    android:outlineProvider="none"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="35dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/titleDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_name"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btn_favorite"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@color/white"
                            android:contentDescription="@string/foodImageDescription"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_title_servings"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/servings"
                            android:theme="@style/textTitleItemCooking"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="@id/servings_content_detail"
                            app:layout_constraintRight_toRightOf="@id/servings_content_detail"
                            app:layout_constraintTop_toBottomOf="@id/titleDetail" />

                        <TextView
                            android:id="@+id/servings_content_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/food_name"
                            android:textAlignment="center"
                            android:theme="@style/textContentsItemCooking"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_servings" />

                        <TextView
                            android:id="@+id/tv_title_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/times"
                            android:theme="@style/textTitleItemCooking"
                            android:visibility="visible"
                            app:layout_constraintEnd_toEndOf="@id/times_content_detail"
                            app:layout_constraintStart_toEndOf="@+id/tv_title_servings"
                            app:layout_constraintTop_toTopOf="@+id/tv_title_servings" />

                        <TextView
                            android:id="@+id/times_content_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_name"
                            android:textAlignment="center"
                            android:theme="@style/textContentsItemCooking"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="@id/tv_title_time"
                            app:layout_constraintRight_toRightOf="@id/tv_title_time"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_time" />

                        <TextView
                            android:id="@+id/tv_title_difficulty"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:text="@string/difficulty"
                            android:theme="@style/textTitleItemCooking"
                            android:visibility="visible"
                            app:layout_constraintStart_toEndOf="@+id/tv_title_time"
                            app:layout_constraintTop_toTopOf="@+id/tv_title_time" />

                        <TextView
                            android:id="@+id/difficulty_content_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_name"
                            android:textAlignment="center"
                            android:theme="@style/textContentsItemCooking"
                            android:visibility="visible"
                            app:layout_constraintLeft_toLeftOf="@id/tv_title_difficulty"
                            app:layout_constraintRight_toRightOf="@id/tv_title_difficulty"
                            app:layout_constraintTop_toBottomOf="@id/tv_title_difficulty" />

                        <TextView
                            android:id="@+id/tv_change_ingredients"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="@string/ingredients"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/servings_content_detail" />

                        <TextView
                            android:id="@+id/tv_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:lines="5"
                            android:text="@string/food_name"
                            android:textSize="13sp"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="@id/tv_change_ingredients"
                            app:layout_constraintTop_toBottomOf="@+id/tv_change_ingredients" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_ingredients"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                            app:layout_constraintLeft_toLeftOf="@id/tv_change_ingredients"
                            app:layout_constraintTop_toBottomOf="@+id/tv_change_ingredients"
                            tools:listitem="@layout/item_ingredients" />

                        <TextView
                            android:id="@+id/tv_change_step"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="@string/step"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_step"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_marginTop="10dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                            app:layout_constraintLeft_toLeftOf="@id/tv_change_step"
                            app:layout_constraintTop_toBottomOf="@+id/tv_change_step"
                            tools:listitem="item_timeline" />

                        <androidx.constraintlayout.widget.Barrier
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:barrierDirection="left"
                            app:constraint_referenced_ids="tv_title_servings" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

        <View
            android:id="@+id/bg_colorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:visibility="gone"
            style="?android:progressBarStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </FrameLayout>

    <View
        android:id="@+id/status_bar_custom"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?attr/colorPrimaryVariant"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_overlay"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:layout_below="@id/status_bar_custom"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/food_name"
            android:minHeight="?attr/actionBarSize"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>